fix: completely desaturated accent color in blurred windows

--- a/src/shared/styles/_variables.scss
+++ b/src/shared/styles/_variables.scss
@@ -42,8 +42,8 @@
 
   &.blurred {
     --selection-color: #666666;
-    --accent-color: #606060;
-    --accent-color-intense: #353535;
+    --accent-color: #695d47;
+    --accent-color-intense: #423824;
   }
 }
 
@@ -83,8 +83,8 @@
 
     &.blurred {
       --selection-color: #ababab;
-      --accent-color: #808080;
-      --accent-color-intense: #a2a2a2;
+      --accent-color: #807561;
+      --accent-color-intense: #b0a99d;
     }
   }
 }
